Fix dtc scheduler